--- a/app/src/main/res/menu/fragment_orders.xml
+++ b/app/src/main/res/menu/fragment_orders.xml
@@ -17,4 +17,10 @@
         app:showAsAction="ifRoom"
         />
 
+    <item
+        android:id="@+id/action_order_history"
+        android:title="@string/action_order_history"
+        app:showAsAction="never"
+        />
+
 </menu>
