--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -15,6 +15,7 @@
         />
 
     <LinearLayout
+        android:id="@+id/order_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
@@ -23,6 +24,8 @@
         android:paddingTop="16dp"
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
+        android:background="?selectableItemBackground"
+        android:clickable="true"
         >
 
         <androidx.recyclerview.widget.RecyclerView
