order detail activity

--- a/app/src/main/res/layout/activity_new_order.xml
+++ b/app/src/main/res/layout/activity_new_order.xml
@@ -108,6 +108,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:overScrollMode="never"
+                tools:itemCount="1"
+                tools:listitem="@layout/item_product_options"
                 />
 
             <!--<LinearLayout-->
