--- a/app/src/main/res/layout/item_product_options.xml
+++ b/app/src/main/res/layout/item_product_options.xml
@@ -25,6 +25,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginEnd="16dp"
         android:orientation="vertical"
         >
 
@@ -52,10 +53,20 @@
     </LinearLayout>
 
     <ImageButton
+        android:id="@+id/btn_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:background="?selectableItemBackgroundBorderless"
+        android:padding="8dp"
+        app:srcCompat="@drawable/ic_edit"
+        />
+
+    <ImageButton
         android:id="@+id/btn_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:background="?selectableItemBackgroundBorderless"
         android:padding="8dp"
         app:srcCompat="@drawable/ic_delete"
