started dashboard graph

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,12 +5,10 @@
     android:orientation="vertical"
     >
 
-    <TextView
+    <com.github.mikephil.charting.charts.HorizontalBarChart
+        android:id="@+id/chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/dashboard_title"
         />
-
 
 </LinearLayout>
