--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
 
     <color name="dashboard_graph_bar">#64b5f6</color>
     <color name="dashboard_graph_bar_req">#e57373</color>
+    <color name="dashboard_tooltip">#bbdefb</color>
 </resources>
