--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,5 @@
     <color name="dashboard_graph_bar">#64b5f6</color>
     <color name="dashboard_graph_bar_req">#e57373</color>
     <color name="dashboard_tooltip">#bbdefb</color>
-    <color name="dashboard_tooltip_req">#c62828</color>
+    <color name="dashboard_tooltip_req">#D32F2F</color>
 </resources>
