--- a/app/src/main/res/layout/dialog_repeat_interval.xml
+++ b/app/src/main/res/layout/dialog_repeat_interval.xml
@@ -37,17 +37,6 @@
 
     <!--</LinearLayout>-->
 
-    <!--<RadioGroup-->
-    <!--android:id="@+id/radio_btn_group"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginStart="@dimen/dialog_margin_horizontal"-->
-    <!--android:layout_marginTop="@dimen/dialog_margin_vertical"-->
-    <!--android:layout_marginEnd="@dimen/dialog_margin_horizontal"-->
-    <!--android:layout_marginBottom="@dimen/dialog_margin_vertical"-->
-    <!--android:orientation="vertical"-->
-    <!--&gt;-->
-
     <LinearLayout
         android:id="@+id/radio_group"
         android:layout_width="match_parent"
@@ -61,7 +50,7 @@
 
         <RadioButton
             android:id="@+id/radio_week"
-            style="@style/TextNormal"
+            style="@style/TextNormal.Dark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
@@ -70,7 +59,7 @@
 
         <RadioButton
             android:id="@+id/radio_two_week"
-            style="@style/TextNormal"
+            style="@style/TextNormal.Dark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
@@ -79,7 +68,7 @@
 
         <RadioButton
             android:id="@+id/radio_month"
-            style="@style/TextNormal"
+            style="@style/TextNormal.Dark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
@@ -89,7 +78,7 @@
 
         <RadioButton
             android:id="@+id/radio_custom"
-            style="@style/TextNormal"
+            style="@style/TextNormal.Dark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
@@ -97,6 +86,55 @@
             />
     </LinearLayout>
 
-    <!--</RadioGroup>-->
+    <LinearLayout
+        android:id="@+id/custom_interval"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dialog_margin_horizontal"
+        android:layout_marginTop="@dimen/dialog_margin_vertical"
+        android:layout_marginEnd="@dimen/dialog_margin_horizontal"
+        android:layout_marginBottom="@dimen/dialog_margin_vertical"
+        android:orientation="vertical"
+        android:visibility="gone"
+        >
+
+        <TextView
+            style="@style/TextNormal.Dark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/contracts_dialog_repeat_interval_title"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:orientation="horizontal"
+            >
+
+            <EditText
+                android:id="@+id/edit_text_number"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:inputType="number"
+                android:maxLength="2"
+                android:minEms="2"
+                android:text="1"
+                />
+
+            <Spinner
+                android:id="@+id/spn_time_period"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="16dp"
+                android:spinnerMode="dropdown"
+                />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
