--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -109,6 +109,10 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="Spinner">
+
+    </style>
+
     <!-- Exchange screen styles -->
     <style name="ExchangeRateText">
         <item name="android:textSize">48sp</item>
