--- a/app/src/main/res/layout/dialog_repeat_interval.xml
+++ b/app/src/main/res/layout/dialog_repeat_interval.xml
@@ -135,6 +135,15 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btn_done"
+            style="?borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="@string/action_done"
+            />
+
     </LinearLayout>
 
 </LinearLayout>
