--- a/app/src/main/res/layout/activity_new_contract.xml
+++ b/app/src/main/res/layout/activity_new_contract.xml
@@ -170,21 +170,63 @@
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/input_layout_reminder"
+            <!--<com.google.android.material.textfield.TextInputLayout-->
+            <!--android:id="@+id/input_layout_reminder"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="@dimen/input_spacing_vertical"-->
+            <!--android:hint="@string/contracts_input_reminder"-->
+            <!--&gt;-->
+
+            <!--<com.google.android.material.textfield.TextInputEditText-->
+            <!--android:id="@+id/edit_text_reminder"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:focusableInTouchMode="false"-->
+            <!--/>-->
+            <!--</com.google.android.material.textfield.TextInputLayout>-->
+
+            <LinearLayout
+                android:id="@+id/input_row_reminder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/input_spacing_vertical"
-                android:hint="@string/contracts_input_reminder"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:orientation="horizontal"
                 >
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_text_reminder"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:focusableInTouchMode="false"
+                <TextView
+                    style="@style/TextNormal"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="start|center_vertical"
+                    android:text="@string/contracts_input_reminder"
                     />
-            </com.google.android.material.textfield.TextInputLayout>
+
+                <EditText
+                    android:id="@+id/edit_text_reminder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLength="2"
+                    android:minEms="2"
+                    android:text="1"
+                    />
+
+                <TextView
+                    android:id="@+id/reminder_txt_days_before"
+                    style="@style/TextNormal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:paddingStart="16dp"
+                    android:text="@string/contracts_reminder_day_before_one"
+                    />
+
+            </LinearLayout>
 
         </LinearLayout>
 
