--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -67,6 +67,7 @@
 
         <!-- todo allow user input -->
         <TextView
+            android:id="@+id/currency_primary_value"
             style="@style/ExchangeRateText.Primary"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -86,6 +87,7 @@
             />
 
         <TextView
+            android:id="@+id/currency_secondary_value"
             style="@style/ExchangeRateText.Secondary"
             android:layout_width="0dp"
             android:layout_height="match_parent"
