--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -1,125 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
     >
 
-    <!-- top row with primary and secondary currencies, swap btn -->
-    <LinearLayout
-        android:id="@+id/current_currencies"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
+        android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         >
 
-        <TextView
-            android:id="@+id/currency_primary"
-            style="@style/ExchangeCurrentCurrency"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="end|center_vertical"
-            tools:text="GBP"
-            />
-
-        <ImageView
-            android:layout_width="wrap_content"
+        <!-- top row with primary and secondary currencies, swap btn -->
+        <LinearLayout
+            android:id="@+id/current_currencies"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="8dp"
-            app:srcCompat="@drawable/ic_swap"
-            />
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal"
+            >
 
-        <TextView
-            android:id="@+id/currency_secondary"
-            style="@style/ExchangeCurrentCurrency"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="start|center_vertical"
-            tools:text="HKD"
-            />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/currency_primary"
+                style="@style/ExchangeCurrentCurrency"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="end|center_vertical"
+                tools:text="GBP"
+                />
 
-    <!-- main view showing current rate -->
-    <LinearLayout
-        android:id="@+id/rate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/current_currencies"
-        android:orientation="horizontal"
-        >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="8dp"
+                app:srcCompat="@drawable/ic_swap"
+                />
 
-        <NumberPicker
-            android:id="@+id/currency_picker_left"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/currency_secondary"
+                style="@style/ExchangeCurrentCurrency"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="start|center_vertical"
+                tools:text="HKD"
+                />
+        </LinearLayout>
+
+        <!-- main view showing current rate -->
+        <LinearLayout
+            android:id="@+id/rate"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/current_currencies"
+            android:orientation="horizontal"
+            >
+
+            <NumberPicker
+                android:id="@+id/currency_picker_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+            <!-- todo allow user input -->
+            <TextView
+                android:id="@+id/currency_primary_value"
+                style="@style/ExchangeRateText.Primary"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|end"
+                android:text="1"
+                />
+
+            <TextView
+                style="@style/ExchangeRateText"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:text="@string/exchange_currency_separator"
+                />
+
+            <TextView
+                android:id="@+id/currency_secondary_value"
+                style="@style/ExchangeRateText.Secondary"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="start|center_vertical"
+                android:text="2.35"
+                />
+
+            <NumberPicker
+                android:id="@+id/currency_picker_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
+
+        <com.martinwalls.nea.components.CustomRecyclerView
+            android:id="@+id/exchange_history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/rate"
+            android:overScrollMode="never"
             />
 
-        <!-- todo allow user input -->
         <TextView
-            android:id="@+id/currency_primary_value"
-            style="@style/ExchangeRateText.Primary"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical|end"
-            android:text="1"
-            />
-
-        <TextView
-            style="@style/ExchangeRateText"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:id="@+id/no_exchange_history"
+            style="@style/ExchangeHistoryItemText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rate"
             android:gravity="center"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:text="@string/exchange_currency_separator"
+            android:text="@string/exchange_no_history"
+            android:visibility="gone"
             />
 
-        <TextView
-            android:id="@+id/currency_secondary_value"
-            style="@style/ExchangeRateText.Secondary"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="start|center_vertical"
-            android:text="2.35"
-            />
-
-        <NumberPicker
-            android:id="@+id/currency_picker_right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-    </LinearLayout>
-
-    <com.martinwalls.nea.components.CustomRecyclerView
-        android:id="@+id/exchange_history"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/rate"
-        android:overScrollMode="never"
-        />
-
-    <TextView
-        android:id="@+id/no_exchange_history"
-        style="@style/ExchangeHistoryItemText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rate"
-        android:gravity="center"
-        android:text="@string/exchange_no_history"
-        android:visibility="gone"
-        />
-
-</RelativeLayout>
+    </RelativeLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
