--- a/app/src/main/res/menu/fragment_exchange.xml
+++ b/app/src/main/res/menu/fragment_exchange.xml
@@ -4,6 +4,15 @@
     >
 
     <item
+        android:id="@+id/action_refresh"
+        android:title="@string/action_refresh"
+        android:icon="@drawable/ic_refresh"
+        app:showAsAction="ifRoom"
+        />
+
+
+
+    <item
         android:id="@+id/action_favourites"
         android:title="@string/action_favourites"
         android:icon="@drawable/ic_star_filled"
